--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,10 @@ watchfiles==0.17.0
 websockets==10.3
 wincertstore==0.2
 xgboost==1.6.2
+pandas
+PyYAML
+numpy
+scikit-learn
+apache-airflow
+pyyaml
 -e .
